--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,7 +76,7 @@ jobs:
           annotations: ${{ steps.meta.outputs.annotations }}
           build-args: |
             VCS_REF=${GITHUB_SHA::8}
-            VERSION=${{ steps.meta.outputs.version }}
+            VERSION_ARG=${{ steps.meta.outputs.version }}
       -
         name: Create a release
         uses: action-pack/github-release@v2
