--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,10 @@ updates:
     directory: /
     schedule:
       interval: weekly
+  - package-ecosystem: 'npm'
+    directory: '/src'
+    schedule:
+      interval: daily
   - package-ecosystem: github-actions
     directory: /
     schedule:
