--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ updates:
     schedule:
       interval: weekly
   - package-ecosystem: 'npm'
-    directory: '/src'
+    directory: /
     schedule:
       interval: daily
   - package-ecosystem: github-actions
