--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,9 +1,5 @@
 {
-  "extends": [
-    "config:base",
-    ":disableDependencyDashboard"
-  ],
-   "npm": {
-      "enabled": true
-    }  
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": ["config:recommended", ":disableDependencyDashboard"],
+  "forkProcessing": "enabled"
 }
