--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,12 +3,12 @@ updates:
   - package-ecosystem: docker
     directory: /
     schedule:
-      interval: weekly
-  - package-ecosystem: 'npm'
-    directory: /
-    schedule:
-      interval: daily
+      interval: "daily"
   - package-ecosystem: github-actions
     directory: /
     schedule:
-      interval: weekly
+      interval: "daily"
+  - package-ecosystem: npm
+    directory: /
+    schedule:
+      interval: "monthly"
