--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     restart: unless-stopped
     command: schedule
     environment:
-      TZ: America/New_York
+      TZ: "America/New_York"
       PORTAINER_BACKUP_URL: "http://portainer:9000"
       PORTAINER_BACKUP_TOKEN: "PORTAINER_ACCESS_TOKEN"
       PORTAINER_BACKUP_PASSWORD: ""
